First website Update index.html

--- a/index.html
+++ b/index.html
@@ -9,3 +9,19 @@
   <p>Instructions: rewrite this page by adding a few sentences about yourself. Follow the instructions in README.md to turn it in.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+</head>
+<body>
+    <h1>About Me</h1>
+    
+    <p>Hello! My name is [Your Name].</p>
+    <p>I am a [Your Profession/Role] with a passion for [Your Hobby or Interest].</p>
+    <p>In my free time, I enjoy [Another Hobby or Activity].</p>
+
+</body>
+</html>
