first corusera web development Update index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
     <h1>About Me</h1>
     
-    <p>Hello! My name is [Your Name].</p>
-    <p>I am a [Your Profession/Role] with a passion for [Your Hobby or Interest].</p>
-    <p>In my free time, I enjoy [Another Hobby or Activity].</p>
+    <p>Hello! My name is Miheret Fekadu.</p>
+    <p>I am a Water supply enginieer with a passion for web development.</p>
+    <p>In my free time, I enjoy spending time with my famlies.</p>
 
 </body>
 </html>
